output/204537.log
kinit: KDC can't fulfill requested option while renewing credentials
  File "ana_delay_scan.py", line 10
    %matplotlib nbagg
    ^
SyntaxError: invalid syntax
  File "ana_delay_scan.py", line 10
    %matplotlib nbagg
    ^
SyntaxError: invalid syntax
-------------------------------------------------------
Primary job  terminated normally, but 1 process returned
a non-zero exit code.. Per user-direction, the job has been aborted.
-------------------------------------------------------
--------------------------------------------------------------------------
mpirun detected that one or more processes exited with non-zero status, thus causing
the job to be terminated. The first process to do so was:

  Process name: [[58298,1],0]
  Exit code:    1
--------------------------------------------------------------------------

------------------------------------------------------------
Sender: LSF System <lsf@psana1102.pcdsn>
Subject: Job 204537: <mpirun python ana_delay_scan.py> in cluster <slac> Exited

Job <mpirun python ana_delay_scan.py> was submitted from host <psanaphi108.pcdsn> by user <sjarosch> in cluster <slac> at Fri Dec  1 19:36:59 2017.
Job was executed on host(s) <2*psana1102>, in queue <psanaq>, as user <sjarosch> in cluster <slac> at Fri Dec  1 19:37:03 2017.
</reg/neh/home/sjarosch> was used as the home directory.
</reg/neh/home/sjarosch/lr25_code> was used as the working directory.
Started at Fri Dec  1 19:37:03 2017.
Terminated at Fri Dec  1 19:37:07 2017.
Results reported at Fri Dec  1 19:37:07 2017.
Cannot open your job file: /reg/neh/home/sjarosch/.lsbatch/1512185819.204537
Exited with exit code 1.

Resource usage summary:

    CPU time :                                   0.36 sec.
    Max Memory :                                 -
    Average Memory :                             -
    Total Requested Memory :                     -
    Delta Memory :                               -
    Max Swap :                                   -
    Max Processes :                              -
    Max Threads :                                -
    Run time :                                   25 sec.
    Turnaround time :                            8 sec.

The output (if any) is above this job summary.

